# capsule-openai

./: Capsule.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  models.rs  schemas.rs
